[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "topopyscale"
version = "0.2.9"
description = "TopoPyScale: A Python Package for Hillslope Climate Downscaling"
authors = [
    { name = "Simon Filhol", email = "simon.filhol@geo.uio.no" },
    { name = "Joel Fiddes" },
    { name = "Kristoffer Aalstad" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
keywords = ["climate", "downscaling", "meteorology", "xarray"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13"
]
dependencies = [
    "xarray[complete]",
    "rioxarray",
    "matplotlib",
    "scikit-learn",
    "pandas",
    "geopandas",
    "numpy",
    "netcdf4",
    "h5netcdf",
    "pvlib",
    "topocalc",
    "cdsapi",
    "rasterio",
    "pyproj",
    "dask",
    "configobj",
    "munch",
    "cdo",
    "gitpython",
    "era5_downloader",
    "bs4",
    "cfgrib"
]

[project.urls]
Homepage = "https://github.com/ArcticSnow/TopoPyScale"
Documentation = "https://topopyscale.readthedocs.io/en/latest/"
Source = "https://github.com/ArcticSnow/TopoPyScale"
Examples = "https://github.com/ArcticSnow/TopoPyScale_examples"
Download = "https://github.com/ArcticSnow/TopoPyScale/releases/latest"

[tool.setuptools.packages.find]
include = ["TopoPyScale*"]
exclude = ["JOSS*", "test_job*"]