[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "TopoPyScale"
authors = [
    { name = "Simon Filhol", email = "simon.filhol@meteo.fr" },
    { name = "Joel Fiddes" },
    { name = "Kristoffer Aalstad" }
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version", "description"]
requires-python = ">=3.13"
keywords = ["climate", "downscaling", "meteorology", "xarray"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Hydrology",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Programming Language :: Python :: 3.13"
]
dependencies = [
    "xarray[complete]>=2025.07.1",
    "rioxarray",
    "matplotlib",
    "scikit-learn",
    "pandas",
    "geopandas",
    "numpy",
    "netcdf4",
    "h5netcdf",
    "pvlib",
    "topocalc",
    "cdsapi",
    "rasterio",
    "pyproj",
    "dask",
    "configobj",
    "munch",
    "cdo",
    "gitpython",
    "era5_downloader",
    "bs4",
    "cfgrib"
]

[project.urls]
Home = "https://topopyscale.readthedocs.io"
Documentation = "https://topopyscale.readthedocs.io/en/latest/"
Source = "https://github.com/ArcticSnow/TopoPyScale"
Examples = "https://github.com/ArcticSnow/TopoPyScale_examples"
Download = "https://github.com/ArcticSnow/TopoPyScale/releases/latest"

[tool.setuptools.packages.find]
include = ["TopoPyScale*"]
exclude = ["JOSS*", "test_job*"]
